Se modificó 'ContenidoResenia' model y se incoporó form para agregar reseña a canción específica.

--- a/apps/blog/templates/blog/index.html
+++ b/apps/blog/templates/blog/index.html
@@ -4,17 +4,18 @@
 
 {% for musica in musicas %}
     <h3>{{musica.nombre}}</h3>
-    <p>{{musica.album.nombre}} -- <strong>{{musica.album.artista.nombre}}</strong></p>
+    <p>{{musica.album.nombre}} -- <strong>{{musica.album.artista.nombre}}</strong> -- Rating promedio: {{musica.media_rating}}</p>
     
     <ul>
         {% for resenia in musica.resenias_list %}
-        <li>{{resenia.title}}</li>
+        <li>{{resenia.title}} | {{resenia.calificacion}}</li>
         {% empty %}
         <li>No hay ninguna por el momento.</li>
         {% endfor %}
     </ul>
     
-    <a href="{% url 'detail_view' musica.slug %}">Ver mas</a>
+    <a href="{% url 'detail_view' musica.slug %}">Ver mas</a> |
+    <a href="{% url 'add_resenia' musica.slug %}">Añadir resenia</a>
 
 {% empty %}
     <p>No hay canciones :/</p>
