--- a/apps/blog/templates/blog/music_detail.html
+++ b/apps/blog/templates/blog/music_detail.html
@@ -8,4 +8,5 @@
         <li>Que no hay resenias, necio!!</li>
     {% endfor %}
     </ul>
+    <a href="{% url 'add_resenia' musica.slug %}">Añadir resenia</a>
 {% endblock contenido %}
