--- a/templates/base.html
+++ b/templates/base.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     {% block contenido %}{% endblock contenido %}
+    {% if request.user.is_authenticated %}
+        <form action="{% url 'logout' %}" method="post">
+            {% csrf_token %}
+            <button type="submit">Log Out</button>
+        </form>
+    {% endif %}
 </body>
 </html>
