--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}{% endblock title %}</title>
 </head>
 <body>
+    {% if request.user.is_authenticated %}{{request.user.username}}{% endif %}
     {% block contenido %}{% endblock contenido %}
     {% if request.user.is_authenticated %}
         <form action="{% url 'logout' %}" method="post">
