Se definió inline para agregar instancias de canciones; modificación en views, forms y template de app 'musica'.

--- a/apps/musica/templates/musica/add_cancion.html
+++ b/apps/musica/templates/musica/add_cancion.html
@@ -4,7 +4,11 @@
 
     <form action="" method="post">
         {% csrf_token %}
-        {{form.as_p}}
-        <button type="submit">Add song</button>
+        {{formset.management_form}}
+        {% for form in formset %}
+            {{form.as_p}}
+            <hr>
+        {% endfor %}
+        <button type="submit">add songs</button>
     </form>
 {% endblock contenido %}
