--- a/apps/musica/templates/musica/cancion_update.html
+++ b/apps/musica/templates/musica/cancion_update.html
@@ -1,10 +1,9 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% block contenido %}
-    <h2>Añadir Cancion </h2>
-
+    <h2>Actualizar cancion</h2>
     <form action="" method="post">
         {% csrf_token %}
         {{form.as_p}}
-        <button type="submit">Add song</button>
+        <button type="submit">Update song</button>
     </form>
 {% endblock contenido %}
