Se definieron cambios en la clase abstracta de 'apps.musica' con el fin de definir un avg_rating para 'Artista', 'Album' y 'Cancion' models.

--- a/apps/musica/templates/musica/album_detail.html
+++ b/apps/musica/templates/musica/album_detail.html
@@ -3,6 +3,7 @@
     <h2>{{album.nombre}} | Detalle</h2>
     
     <p>Artista: {{album.artista.nombre}}</p>
+    <p>Album's Avarage Rating: {{album.avg_rating}} </p>
     <p>Canciones ({{album.songs}}):</p>
     <ul>
         {% for cancion in canciones %}
