--- a/apps/musica/templates/musica/artists.html
+++ b/apps/musica/templates/musica/artists.html
@@ -9,7 +9,7 @@
         {% for artist in artistas %}
         <tr>
             <td>{{artist.nombre}}</td>
-            <td>{{artist.media_rating}}</td>
+            <td>{{artist.avg_rating}}</td>
             <td>
                 <ul>
                 {% for album in artist.albumes_list %}
